# Stage-Whisper

./: .eslintcache  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Stage Whisper.spec  pyproject.toml  stagewhisper.spec
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: integration.yml
backend/: pyproject.toml
backend/stagewhisper/: __main__.py
electron/: .eslintrc.json  package.json  vite.config.ts
electron/electron/: .structure.md  channels.d.ts  index.ts  preload.ts
electron/electron/app/: initializeApp.ts
electron/electron/database/: database.ts  initializeDatabase.ts
electron/electron/functions/initialize/: initializeApp.ts
electron/electron/types/: channels.ts  queries.ts  types.ts  whisperTypes.ts
electron/src/: App.tsx  AppBar.tsx  StyleOverride.tsx  index.css  localization.tsx  main.tsx  styling.tsx
electron/src/debug/: Debug.tsx
electron/src/redux/: hooks.ts  store.ts
frontend/: .editorconfig  .eslintrc.json  .gitignore  .lintstagedrc.mjs  .prettierrc  .simple-git-hooks.json  contributing.md  package.json
frontend/.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml  typechecking.yml
frontend/prisma/: .db.env  dev.db  schema.prisma  seed.ts
frontend/tests/: e2e.spec.ts
frontend/types/: channels.ts  handlers.ts  queries.ts  whisper.ts
stagewhisper/: __main__.py
stagewhisper/app/: .eslintrc.json  package.json  vite.config.ts
stagewhisper/app/electron/: .structure.md  channels.d.ts  index.ts  preload.ts  types.d.ts  whisperTypes.ts
stagewhisper/app/src/: App.tsx  AppBar.tsx  appSlice.ts  index.html  localization.tsx  main.tsx
(+101 files in other folders)
