[tool.poetry]
name = "stagewhisper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Gooey = "^1.0.8"
whisper = {git = "https://github.com/openai/whisper.git", rev = "8cf36f3508c9acd341a45eb2364239a3d81458b9"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"

[tool.poetry.scripts]
stagewhisper = "stagewhisper.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
