[tool.poetry]
name = "stagewhisper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
whisper = {git = "https://github.com/openai/whisper.git", rev = "8cf36f3508c9acd341a45eb2364239a3d81458b9"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
stagewhisper = "stagewhisper.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
